# creature-controller

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
controller/: AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.container  Dockerfile.package  LICENSE  README.md  make_package.sh
controller/cmake/: Package.cmake
controller/config/: controller-config.json  dev-board-config.json  kenny-config.json  mini-config.json  travel-config-example.json
controller/docs/: audio-volume.md
controller/scripts/: set-alsa-volume.sh
controller/src/: Version.h.in  controller-config.h  main.cpp  namespace-stuffs.h
controller/src/audio/: AudioSubsystem.cpp  AudioSubsystem.h  OpusRtpAudioClient.cpp  OpusRtpAudioClient.h  RtpAudioClient.cpp  RtpAudioClient.h  audio-config.h
controller/src/config/: BaseBuilder.cpp  BaseBuilder.h  BuilderException.h  CommandLine.cpp  CommandLine.h  Configuration.cpp  Configuration.h  ConfigurationBuilder.cpp  ConfigurationBuilder.h  CreatureBuilder.cpp  CreatureBuilder.h  CreatureBuilderException.h  UARTDevice.cpp  UARTDevice.h  command-line.cpp  command-line.h  config.cpp  config.h  creature_builder.cpp  creature_builder.h
controller/src/controller/: CommandSendException.h  Controller.cpp  Controller.h  ControllerException.h  Input.cpp  Input.h  ServoModuleHandler.cpp  ServoModuleHandler.h  StepperHandler.cpp  StepperHandler.h  controller.cpp  controller.h  stepper_handler.cpp  stepper_handler.h
controller/src/creature/: Creature.cpp  Creature.h  CreatureException.h  Crow.cpp  Crow.h  DifferentialHead.cpp  DifferentialHead.h  Input.cpp  Input.h  MotorType.h  Parrot.cpp  Parrot.h  creature.cpp  creature.h  parrot.cpp  parrot.h
controller/src/device/: GPIO.cpp  GPIO.h  GPIOException.h  Servo.cpp  Servo.h  ServoException.h  ServoSpecifier.h  Stepper.cpp  Stepper.h  i2c.h  i2c_bcm2835.cpp  i2c_bcm2835.h  i2c_mock.cpp  relay.h  servo.cpp  servo.h  stepper.cpp  stepper.h
controller/src/dmx/: E131Client.cpp  E131Client.h  E131Exception.h  E131Server.cpp  E131Server.h  e131_server.cpp  e131_server.h
controller/src/io/: Message.h  MessageProcessingException.h  MessageProcessor.cpp  MessageProcessor.h  MessageRouter.cpp  MessageRouter.h  SerialException.h  SerialHandler.cpp  SerialHandler.h  SerialOutput.cpp  SerialOutput.h  SerialPortMonitor.cpp  SerialPortMonitor.h  SerialReader.cpp  SerialReader.h  SerialWriter.cpp  SerialWriter.h  UnknownMessageDestintationException.h
controller/src/logging/: Logger.h  LoggingException.h  SpdlogLogger.h
controller/src/server/: BoardSensorReportMessage.h  DynamixelSensorReportMessage.h  EstopMessage.h  MotorSensorReportMessage.h  SensorReportMessage.h  ServerConnection.cpp  ServerConnection.h  ServerMessage.cpp  ServerMessage.h  ServerMessageProcessor.h  WatchdogWarningMessage.h  WebsocketWriter.cpp  WebsocketWriter.h
controller/src/util/: CountingThread.h  MessageQueue.h  Result.h  StoppableThread.h  fast_hsv2rgb.h  fast_hsv2rgb_32bit.cpp  http_utils.cpp  http_utils.h  ranges.cpp  ranges.h  string_utils.cpp  string_utils.h  thread_name.cpp  thread_name.h
controller/src/watchdog/: WatchdogGlobals.cpp  WatchdogGlobals.h  WatchdogThread.cpp  WatchdogThread.h
controller/tests/: LogHandler_test.cpp  MessageProcessor_test.cpp  MessageQueue_test.cpp  MockLogger.h  SerialHandler_test.cpp  SerialOutput_test.cpp  creature_builder_test.cpp  creature_test.cpp  servo_test.cpp  string_utils_test.cpp
controller/tests/config/: Configuation_test.cpp  CreatureBuilder_test.cpp  UARTDevice_test.cpp
controller/tests/creature/: DifferentialHead_test.cpp  Input_test.cpp
controller/tests/dmx/: E131Server_test.cpp
controller/tests/io/: Message_test.cpp
controller/tests/util/: StoppableThread_test.cpp
firmware/: CLAUDE.md  CMakeLists.txt  FreeRTOSConfig.h  controller-config.h  openocd-rp2350.cfg
firmware/boards/: creature_controller.h
firmware/docs/: dynamixel-controller-integration.md  dynamixel-servo-tester.md  dynamixel-tester-plan.md  i2c-eeprom-programmer.md  opt-os-freertos-migration.md
firmware/src/: freertos_extra.cpp  freertos_hooks.c  freertos_hooks.cpp  freertos_hooks.h  main.c  main.cpp  tasks.c  tasks.cpp  tasks.h  tusb_config.h  types.h  version.h.in
firmware/src/controller/: config.h  controller.c  controller.cpp  controller.h  i2c_servo_module.c  i2c_servo_module.h  logger_hook.c  main.c
firmware/src/debug/: blinker.c  blinker.cpp  blinker.h  remote_logging.c  remote_logging.cpp  remote_logging.h  sensor_reporter.c  sensor_reporter.h  stats_reporter.c  stats_reporter.cpp  stats_reporter.h
firmware/src/device/: colors.c  colors.h  eeprom.c  eeprom.h  eeprom_hours.c  eeprom_hours.h  mcp3304.c  mcp3304.h  mcp9008.c  mcp9808.c  mcp9808.h  mcp9908.h  pac1954.c  pac1954.h  pca9685.c  pca9685.h  power_control.c  power_control.h  power_relay.c  power_relay.h  status_lights.c  status_lights.h
firmware/src/dynamixel/: dynamixel_hal.c  dynamixel_hal.h  dynamixel_protocol.c  dynamixel_protocol.h  dynamixel_registers.h  dynamixel_servo.c  dynamixel_servo.h
firmware/src/dynamixel_tester/: config.h  main.c  shell.c  shell.h  usb.c  usb.h  usb_descriptors.c
firmware/src/io/: i2c.c  i2c.h  message_processor.c  message_processor.h  responsive_analog_read_filter.c  responsive_analog_read_filter.h  spi.c  spi.h  uart_serial.c  uart_serial.h  usb_serial.c  usb_serial.cpp  usb_serial.h  usb_workers.c  usb_workers.cpp
firmware/src/logging/: logging.c  logging.cpp  logging.h  logging_api.h  logging_config.h
firmware/src/messaging/: messaging.c  messaging.cpp  messaging.h
firmware/src/programmer/: config.h  i2c_programmer.c  i2c_programmer.h  main.c  shell.c  shell.h  tps25750_15v.c  tps25750_20v_3a.c  usb.c  usb.h  usb_descriptors.c  watchdog.c
firmware/src/sensor/: sensor.c  sensor.h
firmware/src/usb/: usb.c  usb.cpp  usb.h  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors.h
firmware/src/usbc_pd/: main.c  sensortest.c  sensortest.h
firmware/src/util/: fast_hsv2rgb.h  fast_hsv2rgb_32bit.c  ranges.c  (+4 more)
firmware/tests/: CMakeLists.txt
firmware/tools/: raw_cdc_capture.py
(+154 files in other folders)
